[gd_scene load_steps=7 format=3 uid="uid://2flr56gp4jiv"]

[ext_resource type="Script" path="res://game_ui/game_ui.gd" id="1_n6xdf"]
[ext_resource type="LabelSettings" uid="uid://c7abei73g48vm" path="res://assets/lg_48_H4_gr.tres" id="1_psmg7"]
[ext_resource type="FontFile" uid="uid://5e01bh3c7jfp" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_x2epw"]
[ext_resource type="AudioStream" uid="uid://cei6eqgrxrdvh" path="res://assets/audio/jazzyfrenchy.mp3" id="4_2qfwj"]

[sub_resource type="LabelSettings" id="LabelSettings_rvxx7"]
font = ExtResource("2_x2epw")
font_size = 64
font_color = Color(0.447059, 0.815686, 1, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.568627)

[sub_resource type="LabelSettings" id="LabelSettings_nob7k"]
font = ExtResource("2_x2epw")
font_size = 48
font_color = Color(0, 0.462745, 0.631373, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.568627)

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_n6xdf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
text = "LEVEL"
label_settings = ExtResource("1_psmg7")

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
text = "ATTEMPTS
"
label_settings = ExtResource("1_psmg7")

[node name="VB2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = SubResource("LabelSettings_rvxx7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_nob7k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="complete_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2qfwj")
